src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AP_Time_Invested__c</fullName>
        <label>AP Time Invested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Balance_2__c</fullName>
        <label>Account Balance #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Balance_3__c</fullName>
        <label>Account Balance #3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Balance_4__c</fullName>
        <label>Account Balance #4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Balance_Date_2__c</fullName>
        <label>Account Balance Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Balance_Date_3__c</fullName>
        <label>Account Balance Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Balance_Date_4__c</fullName>
        <label>Account Balance Date #4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Balance_Date__c</fullName>
        <label>Account Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Cell_Phone_2__c</fullName>
        <label>Account Executive Cell Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Cell_Phone_3__c</fullName>
        <label>Account Executive Cell Phone #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Cell_Phone_4__c</fullName>
        <label>Account Executive Cell Phone #4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Cell_Phone__c</fullName>
        <label>Account Executive Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email_2__c</fullName>
        <label>Account Executive Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email_3__c</fullName>
        <label>Account Executive Email #3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email_4__c</fullName>
        <label>Account Executive Email #4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <label>Account Executive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name_2__c</fullName>
        <label>Account Executive Name #2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name_3__c</fullName>
        <label>Account Executive Name #3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name_4__c</fullName>
        <label>Account Executive Name #4</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <label>Account Executive Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Office_Phone_2__c</fullName>
        <label>Account Executive Office Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Office_Phone_3__c</fullName>
        <label>Account Executive Office Phone #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Office_Phone_4__c</fullName>
        <label>Account Executive Office Phone #4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Office_Phone__c</fullName>
        <label>Account Executive Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Team_Email_2__c</fullName>
        <label>Account Team Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Team_Email_3__c</fullName>
        <label>Account Team Email #3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Team_Email_4__c</fullName>
        <label>Account Team Email #4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Team_Email__c</fullName>
        <label>Account Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Team_Name_2__c</fullName>
        <label>Account Team Name #2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Name_3__c</fullName>
        <label>Account Team Name #3</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Name_4__c</fullName>
        <label>Account Team Name #4</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Name__c</fullName>
        <label>Account Team Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Phone_2__c</fullName>
        <label>Account Team Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Team_Phone_3__c</fullName>
        <label>Account Team Phone #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Team_Phone_4__c</fullName>
        <label>Account Team Phone #4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Team_Phone__c</fullName>
        <label>Account Team Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Active_Agreement_Term_Effective_Date__c</fullName>
        <label>Active Agreement Term Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Term_Year__c</fullName>
        <formula>YEAR( Active_Agreement_Term_Effective_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Term Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_2__c</fullName>
        <label>Aircraft Type #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_3__c</fullName>
        <label>Aircraft Type #3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_4__c</fullName>
        <label>Aircraft Type #4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assistant_Notes__c</fullName>
        <label>Assistant Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attorney_1_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney #1 Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Attorney #1 Firm)</relationshipLabel>
        <relationshipName>Contacts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney #1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Attorney #1)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_2_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney #2 Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Attorney #2 Firm)</relationshipLabel>
        <relationshipName>Contacts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Attorney #2)</relationshipLabel>
        <relationshipName>Contacts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automatic_Renewal__c</fullName>
        <label>Automatic Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aviation_Providers_Being_Considered__c</fullName>
        <label>Aviation Providers Being Considered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Air Charter Service</fullName>
                </value>
                <value>
                    <fullName>Air Partner</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Black Jet Technology</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Management</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chapman Freeborn</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>FreshAir</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Gama Charters</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Hop-A-Jet</fullName>
                </value>
                <value>
                    <fullName>Interstate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Analyst__c</fullName>
        <label>Backup Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Craig Ross</fullName>
                </value>
                <value>
                    <fullName>Luke Hatfield</fullName>
                </value>
                <value>
                    <fullName>Jennifer Kim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Time_to_Contact__c</fullName>
        <label>Best Time/Method to Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anytime</fullName>
                </value>
                <value>
                    <fullName>Early Morning</fullName>
                </value>
                <value>
                    <fullName>Email-1st</fullName>
                </value>
                <value>
                    <fullName>Email-2nd</fullName>
                </value>
                <value>
                    <fullName>Email-3rd</fullName>
                </value>
                <value>
                    <fullName>Evenings</fullName>
                </value>
                <value>
                    <fullName>Phone-1st</fullName>
                </value>
                <value>
                    <fullName>Phone-2nd</fullName>
                </value>
                <value>
                    <fullName>Phone-3rd</fullName>
                </value>
                <value>
                    <fullName>Text-1st</fullName>
                </value>
                <value>
                    <fullName>Text-2nd</fullName>
                </value>
                <value>
                    <fullName>Text-3rd</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonus_Funds_2__c</fullName>
        <label>Bonus Funds #2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Funds_3__c</fullName>
        <label>Bonus Funds #3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Funds_4__c</fullName>
        <label>Bonus Funds #4</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Funds__c</fullName>
        <label>Bonus Funds</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Hour_s_2__c</fullName>
        <label>Bonus Hour(s) #2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Hour_s_3__c</fullName>
        <label>Bonus Hour(s) #3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Hour_s_4__c</fullName>
        <label>Bonus Hour(s) #4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Hour_s__c</fullName>
        <label>Bonus Hour(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_2__c</fullName>
        <label>Broker #2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Charter Service</fullName>
                </value>
                <value>
                    <fullName>Air Partner</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Black Jet Technology</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Management</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chapman Freeborn</fullName>
                </value>
                <value>
                    <fullName>FreshAir</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Jetco</fullName>
                </value>
                <value>
                    <fullName>Jet Demands</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>Jet Set</fullName>
                </value>
                <value>
                    <fullName>JetSmarter</fullName>
                </value>
                <value>
                    <fullName>Luxury Business Jets</fullName>
                </value>
                <value>
                    <fullName>Magellan Jets</fullName>
                </value>
                <value>
                    <fullName>Priority One Jets</fullName>
                </value>
                <value>
                    <fullName>Sentient</fullName>
                </value>
                <value>
                    <fullName>SkyJet</fullName>
                </value>
                <value>
                    <fullName>Stellar Labs</fullName>
                </value>
                <value>
                    <fullName>Trevala Jets</fullName>
                </value>
                <value>
                    <fullName>Unity Jets</fullName>
                </value>
                <value>
                    <fullName>Victor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_3__c</fullName>
        <label>Broker #3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Charter Service</fullName>
                </value>
                <value>
                    <fullName>Air Partner</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Black Jet Technology</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Management</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chapman Freeborn</fullName>
                </value>
                <value>
                    <fullName>FreshAir</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Jetco</fullName>
                </value>
                <value>
                    <fullName>Jet Demands</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>Jet Set</fullName>
                </value>
                <value>
                    <fullName>JetSmarter</fullName>
                </value>
                <value>
                    <fullName>Luxury Business Jets</fullName>
                </value>
                <value>
                    <fullName>Magellan Jets</fullName>
                </value>
                <value>
                    <fullName>Priority One Jets</fullName>
                </value>
                <value>
                    <fullName>Sentient</fullName>
                </value>
                <value>
                    <fullName>SkyJet</fullName>
                </value>
                <value>
                    <fullName>Stellar Labs</fullName>
                </value>
                <value>
                    <fullName>Trevala Jets</fullName>
                </value>
                <value>
                    <fullName>Unity Jets</fullName>
                </value>
                <value>
                    <fullName>Victor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_4__c</fullName>
        <label>Broker #4</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Charter Service</fullName>
                </value>
                <value>
                    <fullName>Air Partner</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Black Jet Technology</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Management</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chapman Freeborn</fullName>
                </value>
                <value>
                    <fullName>FreshAir</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Jetco</fullName>
                </value>
                <value>
                    <fullName>Jet Demands</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>Jet Set</fullName>
                </value>
                <value>
                    <fullName>JetSmarter</fullName>
                </value>
                <value>
                    <fullName>Luxury Business Jets</fullName>
                </value>
                <value>
                    <fullName>Magellan Jets</fullName>
                </value>
                <value>
                    <fullName>Priority One Jets</fullName>
                </value>
                <value>
                    <fullName>Sentient</fullName>
                </value>
                <value>
                    <fullName>SkyJet</fullName>
                </value>
                <value>
                    <fullName>Stellar Labs</fullName>
                </value>
                <value>
                    <fullName>Trevala Jets</fullName>
                </value>
                <value>
                    <fullName>Unity Jets</fullName>
                </value>
                <value>
                    <fullName>Victor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Charter Service</fullName>
                </value>
                <value>
                    <fullName>Air Partner</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Black Jet Technology</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Sky Management</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chapman Freeborn</fullName>
                </value>
                <value>
                    <fullName>FreshAir</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Jetco</fullName>
                </value>
                <value>
                    <fullName>Jet Demands</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>Jet Set</fullName>
                </value>
                <value>
                    <fullName>JetSmarter</fullName>
                </value>
                <value>
                    <fullName>Luxury Business Jets</fullName>
                </value>
                <value>
                    <fullName>Magellan Jets</fullName>
                </value>
                <value>
                    <fullName>Priority One Jets</fullName>
                </value>
                <value>
                    <fullName>Sentient</fullName>
                </value>
                <value>
                    <fullName>SkyJet</fullName>
                </value>
                <value>
                    <fullName>Stellar Labs</fullName>
                </value>
                <value>
                    <fullName>Trevala Jets</fullName>
                </value>
                <value>
                    <fullName>Unity Jets</fullName>
                </value>
                <value>
                    <fullName>Victor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Assistant_Cell_Phone__c</fullName>
        <label>Business Assistant Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Date_of_Birth__c</fullName>
        <label>Business Assistant Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Email__c</fullName>
        <label>Business Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Name__c</fullName>
        <label>Business Assistant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Phone__c</fullName>
        <label>Business Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPA_Business_Management_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPA/ Business Management Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (CPA/ Business Management Firm)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPA_Business_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPA/Business Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (CPA/Business Manager)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CURRENT_AVIATION_PROVIDER_S_4__c</fullName>
        <label>CURRENT AVIATION PROVIDER(S) #4</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Aircraft Services Group</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>Cinco Air Charter</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>Dumont Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Gama Charters</fullName>
                </value>
                <value>
                    <fullName>Hop-A-Jet</fullName>
                </value>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Jet Aviation</fullName>
                </value>
                <value>
                    <fullName>Jet Edge International</fullName>
                </value>
                <value>
                    <fullName>Jet Linx</fullName>
                </value>
                <value>
                    <fullName>Jet Methods</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>JetSelect</fullName>
                </value>
                <value>
                    <fullName>Jet Source</fullName>
                </value>
                <value>
                    <fullName>JetSuite</fullName>
                </value>
                <value>
                    <fullName>JFI (JetFlite International)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charter_Broker_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Broker Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charter_Operator_Rerral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Operator Rerral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Communication_Profile__c</fullName>
        <label>CLIENT COMMUNICATION PROFILE</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_End_Date__c</fullName>
        <label>Client End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>